fixing carousel on firefox 1

--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -3,6 +3,10 @@
     min-height: 600px !important;
     max-height: 600px !important;
 }
+.carousel-inner {
+    min-height: 600px !important;
+    max-height: 600px !important;
+}
 .landing {
     
     height: 600px;
